// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stack API should log error detail on failed creation request 1`] = `
Array [
  Object {
    "data": undefined,
    "message": "Requesting stack creation request for expectedName",
    "metadata": undefined,
  },
]
`;

exports[`Stack API should log error detail on failed creation request 2`] = `
Array [
  Object {
    "data": undefined,
    "message": "creation request payload: {\\"datalabInfo\\":{\\"name\\":\\"testlab\\",\\"domain\\":\\"test-datalabs.nerc.ac.uk\\"},\\"name\\":\\"expectedName\\",\\"type\\":\\"expectedType\\",\\"isPublic\\":true}",
    "metadata": undefined,
  },
]
`;

exports[`Stack API should log error detail on failed creation request 3`] = `
Array [
  Object {
    "data": undefined,
    "message": [Error: failedRequest],
    "metadata": undefined,
  },
]
`;

exports[`Stack API should log error detail on failed deletion request 1`] = `Array []`;

exports[`Stack API should log error detail on failed deletion request 2`] = `Array []`;

exports[`Stack API should log error detail on failed deletion request 3`] = `
Array [
  Object {
    "data": undefined,
    "message": [Error: failedRequest],
    "metadata": undefined,
  },
]
`;

exports[`Stack API should log stack detail on successful creation request 1`] = `
Array [
  Object {
    "data": undefined,
    "message": "Requesting stack creation request for expectedName",
    "metadata": undefined,
  },
]
`;

exports[`Stack API should log stack detail on successful creation request 2`] = `
Array [
  Object {
    "data": undefined,
    "message": "creation request payload: {\\"datalabInfo\\":{\\"name\\":\\"testlab\\",\\"domain\\":\\"test-datalabs.nerc.ac.uk\\"},\\"name\\":\\"expectedName\\",\\"type\\":\\"expectedType\\",\\"isPublic\\":true}",
    "metadata": undefined,
  },
]
`;

exports[`Stack API should log stack detail on successful creation request 3`] = `Array []`;

exports[`Stack API should log stack detail on successful deletion request 1`] = `
Array [
  Object {
    "data": undefined,
    "message": "Requesting stack deletion request for expectedName",
    "metadata": undefined,
  },
]
`;

exports[`Stack API should log stack detail on successful deletion request 2`] = `
Array [
  Object {
    "data": undefined,
    "message": "deletion request payload: {\\"datalabInfo\\":{\\"name\\":\\"testlab\\",\\"domain\\":\\"test-datalabs.nerc.ac.uk\\"},\\"name\\":\\"expectedName\\",\\"type\\":\\"expectedType\\"}",
    "metadata": undefined,
  },
]
`;

exports[`Stack API should log stack detail on successful deletion request 3`] = `Array []`;
